manifests/odoo-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
      tier: backend
  template:
    metadata:
      labels:
        app: odoo
        tier: backend
    spec:
      containers:
      - name: odoo-postgres
        image: postgres:13
        ports:
        - containerPort: 5432
#        volumeMounts:
#        - name: odoo-postgres
#          mountPath: /var/lib/postgres/data   
#      volumes:
#      - name: odoo-postgres
#        hostPath:
#          path: /data/odoo-postgres
