manifests/pgadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgadmin
      tier: frontend
  template:
    metadata:
      labels:
        app: pgadmin
        tier: frontend
    spec:
      containers:
      - name: pgadmin-webapp
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
#        volumeMounts:
#        - name: odoo-storage
#          mountPath: /var/lib/odoo
#      volumes:
#      - name: pgadmin-storage
#        hostPath:
#          path: /data/pgadmin
