manifests/ic-webapp-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: ic-webapp-svc
spec:
  selector:
    app: ic-webapp
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30083
