manifests/odoo-nodeport-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: odoo-svc
spec:
  selector:
    app: odoo
    tier: frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 8069
    targetPort: 8069
    nodePort: 30080
