manifests/ingress-pgadmin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
  - host: dev.pgadmin.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-svc
            port: 5050
